# tgamengine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  LICENSE  vcpkg-configuration.json  vcpkg.json
application/: CMakeLists.txt
application/src/: Application.cpp
common/: CMakeLists.txt
common/include/: Debug.h  Errors.h  GameCommon.h  StringUtils.h  WStringUtils.h
common/src/: Debug.cpp  Errors.cpp
common/tests/: CMakeLists.txt  test_errors.cpp  test_gamecommon.cpp  test_stringutils.cpp  test_wstringutils.cpp
engine/: CMakeLists.txt
engine/include/Engine/: Components.h  Engine.h  Graphics.h
engine/include/Math/: BaseTypes.h  Trig.h
engine/src/: Engine.cpp  Graphics.cpp
engine/tests/: CMakeLists.txt  test_math.cpp  test_trig.cpp
